--- a/src/site/notes/k8s进阶学习/基础/云原生领域.md
+++ b/src/site/notes/k8s进阶学习/基础/云原生领域.md
@@ -1,5 +1,5 @@
 ---
-{"title":"云原生领域","dg-publish":true,"dg-home":true,"permalink":"/k8s///","tags":["gardenEntry"],"dgPassFrontmatter":true}
+{"title":"云原生领域","dg-publish":true,"dg-home":true,"permalink":"/k8s进阶学习/基础/云原生领域/","tags":["gardenEntry"],"dgPassFrontmatter":true}
 ---
 
 
