--- a/src/site/notes/k8s进阶学习/日志/日志采集架构.md
+++ b/src/site/notes/k8s进阶学习/日志/日志采集架构.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"permalink":"/k8s///","dgPassFrontmatter":true}
+{"dg-publish":true,"permalink":"/k8s进阶学习/日志/日志采集架构/","dgPassFrontmatter":true}
 ---
 
 ### Kubernetes ⽇志收集
