--- a/src/site/notes/k8s进阶学习/基础/查询命名空间下所有资源并删除.md
+++ b/src/site/notes/k8s进阶学习/基础/查询命名空间下所有资源并删除.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"dg-home":true,"permalink":"/k8s进阶学习/基础/查询命名空间下所有资源并删除/","tags":["gardenEntry"],"dgPassFrontmatter":true}
+{"dg-publish":true,"permalink":"/k8s进阶学习/基础/查询命名空间下所有资源并删除/","dgPassFrontmatter":true}
 ---
 
 查询单个命名空间下的所有资源
