--- a/src/site/notes/k8s进阶学习/基础/查询命名空间下所有资源并删除.md
+++ b/src/site/notes/k8s进阶学习/基础/查询命名空间下所有资源并删除.md
@@ -2,7 +2,7 @@
 {"dg-publish":true,"permalink":"/k8s进阶学习/基础/查询命名空间下所有资源并删除/","dgPassFrontmatter":true}
 ---
 
-查询单个命名空间下的所有资源
+##### 查询单个命名空间下的所有资源
 `kubectl api-resources --verbs=list --namespaced -o name | xargs -n 1 kubectl get --show-kind --ignore-not-found -n xxx(ns-name)`
 
 ```shell
@@ -16,7 +16,7 @@ NAME                        SECRETS   AGE
 serviceaccount/default      1         58d
 serviceaccount/prometheus   1         58d
 ```
-强制删除
+##### 强制删除
 ```shell
 [root@k8smaster loadbalancer]# kubectl delete ns monitor --force --grace-period=0
 Warning: Immediate deletion does not wait for confirmation that the running resource has been terminated. The resource may continue to run on the cluster indefinitely.
